themedir     = $(datadir)/themes
adaptadir    = $(DESTDIR)$(themedir)/Adapta
noktodir     = $(DESTDIR)$(themedir)/Adapta-Nokto
adaptaetadir = $(DESTDIR)$(themedir)/Adapta-Eta
noktoetadir  = $(DESTDIR)$(themedir)/Adapta-Nokto-Eta

gtk3_assetdir = $(srcdir)/asset/assets-gtk3

gtk3_thumb_file = \
	$(gtk3_assetdir)/thumbnail.png

gtk3_darkthumb_file = \
	$(gtk3_assetdir)/thumbnail-dark.png

gtk320dir   = $(srcdir)/gtk-3.20
gtk320_file = \
	$(gtk320dir)/gtk.css \
	$(gtk320dir)/gtk-dark.css \
	$(gtk320dir)/gtk.gresource

gtk320etadir   = $(srcdir)/gtk-3.20-eta
gtk320eta_file = \
	$(gtk320etadir)/gtk.css \
	$(gtk320etadir)/gtk-dark.css \
	$(gtk320etadir)/gtk.gresource

gtk320noktodir   = $(srcdir)/gtk-3.20-nokto
gtk320nokto_file = \
	$(gtk320noktodir)/gtk.css \
	$(gtk320noktodir)/gtk.gresource

gtk320noktoetadir   = $(srcdir)/gtk-3.20-nokto-eta
gtk320noktoeta_file = \
	$(gtk320noktoetadir)/gtk.css \
	$(gtk320noktoetadir)/gtk.gresource

gtk322dir   = $(srcdir)/gtk-3.22
gtk322_file = \
	$(gtk322dir)/gtk.css \
	$(gtk322dir)/gtk-dark.css \
	$(gtk322dir)/gtk.gresource

gtk322etadir   = $(srcdir)/gtk-3.22-eta
gtk322eta_file = \
	$(gtk322etadir)/gtk.css \
	$(gtk322etadir)/gtk-dark.css \
	$(gtk322etadir)/gtk.gresource

gtk322noktodir   = $(srcdir)/gtk-3.22-nokto
gtk322nokto_file = \
	$(gtk322noktodir)/gtk.css \
	$(gtk322noktodir)/gtk.gresource

gtk322noktoetadir   = $(srcdir)/gtk-3.22-nokto-eta
gtk322noktoeta_file = \
	$(gtk322noktoetadir)/gtk.css \
	$(gtk322noktoetadir)/gtk.gresource

gtk324dir   = $(srcdir)/gtk-3.24
gtk324_file = \
	$(gtk324dir)/gtk.css \
	$(gtk324dir)/gtk-dark.css \
	$(gtk324dir)/gtk.gresource

gtk324etadir   = $(srcdir)/gtk-3.24-eta
gtk324eta_file = \
	$(gtk324etadir)/gtk.css \
	$(gtk324etadir)/gtk-dark.css \
	$(gtk324etadir)/gtk.gresource

gtk324noktodir   = $(srcdir)/gtk-3.24-nokto
gtk324nokto_file = \
	$(gtk324noktodir)/gtk.css \
	$(gtk324noktodir)/gtk.gresource

gtk324noktoetadir   = $(srcdir)/gtk-3.24-nokto-eta
gtk324noktoeta_file = \
	$(gtk324noktoetadir)/gtk.css \
	$(gtk324noktoetadir)/gtk.gresource

gtk2dir   = $(srcdir)/gtk-2.0
gtk2_file = \
	$(gtk2dir)/3rd-party.rc \
	$(gtk2dir)/colors.rc \
	$(gtk2dir)/common.rc
gtk2_gtkrc_file = \
	$(gtk2dir)/gtkrc
gtk2_eta_file = \
	$(gtk2dir)/3rd-party-eta.rc \
	$(gtk2dir)/colors.rc \
	$(gtk2dir)/common-eta.rc
gtk2_eta_gtkrc_file = \
	$(gtk2dir)/gtkrc-eta
gtk2_assetdir   = $(srcdir)/asset/assets-gtk2
gtk2_arrow_file = \
	$(gtk2_assetdir)/Arrows/down-alt-hover.png \
	$(gtk2_assetdir)/Arrows/down-alt-insensitive.png \
	$(gtk2_assetdir)/Arrows/down-alt.png \
	$(gtk2_assetdir)/Arrows/down-insensitive.png \
	$(gtk2_assetdir)/Arrows/down.png \
	$(gtk2_assetdir)/Arrows/down-dark.png \
	$(gtk2_assetdir)/Arrows/left-alt-hover.png \
	$(gtk2_assetdir)/Arrows/left-alt-insensitive.png \
	$(gtk2_assetdir)/Arrows/left-alt.png \
	$(gtk2_assetdir)/Arrows/left-insensitive.png \
	$(gtk2_assetdir)/Arrows/left.png \
	$(gtk2_assetdir)/Arrows/left-dark.png \
	$(gtk2_assetdir)/Arrows/right-alt-hover.png \
	$(gtk2_assetdir)/Arrows/right-alt-insensitive.png \
	$(gtk2_assetdir)/Arrows/right-alt.png \
	$(gtk2_assetdir)/Arrows/right-insensitive.png \
	$(gtk2_assetdir)/Arrows/right.png \
	$(gtk2_assetdir)/Arrows/right-dark.png \
	$(gtk2_assetdir)/Arrows/up-alt-hover.png \
	$(gtk2_assetdir)/Arrows/up-alt-insensitive.png \
	$(gtk2_assetdir)/Arrows/up-alt.png \
	$(gtk2_assetdir)/Arrows/up-insensitive.png \
	$(gtk2_assetdir)/Arrows/up.png \
	$(gtk2_assetdir)/Arrows/up-dark.png
gtk2_button_file = \
	$(gtk2_assetdir)/Buttons/accent-flat-button-active.png \
	$(gtk2_assetdir)/Buttons/accent-flat-button-hover.png \
	$(gtk2_assetdir)/Buttons/buttonbox-flat-button-active.png \
	$(gtk2_assetdir)/Buttons/buttonbox-flat-button-hover.png \
	$(gtk2_assetdir)/Buttons/button-active.png \
	$(gtk2_assetdir)/Buttons/button-hover.png \
	$(gtk2_assetdir)/Buttons/button-insensitive.png \
	$(gtk2_assetdir)/Buttons/button.png \
	$(gtk2_assetdir)/Buttons/flat-button-active.png \
	$(gtk2_assetdir)/Buttons/flat-button-hover.png \
	$(gtk2_assetdir)/Buttons/ltr-button-active.png \
	$(gtk2_assetdir)/Buttons/ltr-button-hover.png \
	$(gtk2_assetdir)/Buttons/ltr-button-insensitive.png \
	$(gtk2_assetdir)/Buttons/ltr-button.png \
	$(gtk2_assetdir)/Buttons/rtl-button-active.png \
	$(gtk2_assetdir)/Buttons/rtl-button-hover.png \
	$(gtk2_assetdir)/Buttons/rtl-button-insensitive.png \
	$(gtk2_assetdir)/Buttons/rtl-button.png
gtk2_checkradio_file = \
	$(gtk2_assetdir)/Check-Radio/check-mixed-active.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-hover.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed.png \
	$(gtk2_assetdir)/Check-Radio/check-off-active.png \
	$(gtk2_assetdir)/Check-Radio/check-off-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-off-hover.png \
	$(gtk2_assetdir)/Check-Radio/check-off-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-off-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/check-off-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-off.png \
	$(gtk2_assetdir)/Check-Radio/check-on-active.png \
	$(gtk2_assetdir)/Check-Radio/check-on-hover.png \
	$(gtk2_assetdir)/Check-Radio/check-on-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/check-on.png \
	$(gtk2_assetdir)/Check-Radio/check-on-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-on-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-on-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-active.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-hover.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-active.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-hover.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-off.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-active.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-hover.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-insensitive.png \
	$(gtk2_assetdir)/Check-Radio/radio-on.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-menuitem.png
gtk2_column_file = \
	$(gtk2_assetdir)/Column/column-active.png \
	$(gtk2_assetdir)/Column/column-hover.png \
	$(gtk2_assetdir)/Column/column-insensitive.png \
	$(gtk2_assetdir)/Column/column.png
gtk2_entry_file = \
	$(gtk2_assetdir)/Entry/bg.png \
	$(gtk2_assetdir)/Entry/bg-active.png \
	$(gtk2_assetdir)/Entry/bg-insensitive.png \
	$(gtk2_assetdir)/Entry/entry-active.png \
	$(gtk2_assetdir)/Entry/entry-insensitive.png \
	$(gtk2_assetdir)/Entry/entry.png \
	$(gtk2_assetdir)/Entry/ltr-entry-active.png \
	$(gtk2_assetdir)/Entry/ltr-entry-insensitive.png \
	$(gtk2_assetdir)/Entry/ltr-entry.png \
	$(gtk2_assetdir)/Entry/rtl-entry-active.png \
	$(gtk2_assetdir)/Entry/rtl-entry-insensitive.png \
	$(gtk2_assetdir)/Entry/rtl-entry.png
gtk2_handle_file = \
	$(gtk2_assetdir)/Handles/h-handle-active.png \
	$(gtk2_assetdir)/Handles/h-handle-hover.png \
	$(gtk2_assetdir)/Handles/h-handle-insensitive.png \
	$(gtk2_assetdir)/Handles/h-handle.png \
	$(gtk2_assetdir)/Handles/v-handle-active.png \
	$(gtk2_assetdir)/Handles/v-handle-hover.png \
	$(gtk2_assetdir)/Handles/v-handle-insensitive.png \
	$(gtk2_assetdir)/Handles/v-handle.png
gtk2_line_file = \
	$(gtk2_assetdir)/Lines/h-line.png \
	$(gtk2_assetdir)/Lines/menu-line-ltr.png \
	$(gtk2_assetdir)/Lines/menu-line-rtl.png \
	$(gtk2_assetdir)/Lines/v-line.png
gtk2_other_file = \
	$(gtk2_assetdir)/Others/bottom.png \
	$(gtk2_assetdir)/Others/focus.png \
	$(gtk2_assetdir)/Others/left.png \
	$(gtk2_assetdir)/Others/menu-bg.png \
	$(gtk2_assetdir)/Others/null.svg \
	$(gtk2_assetdir)/Others/right.png \
	$(gtk2_assetdir)/Others/top-hover.png \
	$(gtk2_assetdir)/Others/top.png
gtk2_progress_file = \
	$(gtk2_assetdir)/ProgressBar/bar.png \
	$(gtk2_assetdir)/ProgressBar/trough.png
gtk2_range_file = \
	$(gtk2_assetdir)/Range/h-scale-trough-active.png \
	$(gtk2_assetdir)/Range/h-scale-trough-insensitive.png \
	$(gtk2_assetdir)/Range/h-scale-trough.png \
	$(gtk2_assetdir)/Range/scale-slider-active.png \
	$(gtk2_assetdir)/Range/scale-slider-hover.png \
	$(gtk2_assetdir)/Range/scale-slider-insensitive.png \
	$(gtk2_assetdir)/Range/scale-slider.png \
	$(gtk2_assetdir)/Range/v-scale-trough-active.png \
	$(gtk2_assetdir)/Range/v-scale-trough-insensitive.png \
	$(gtk2_assetdir)/Range/v-scale-trough.png
gtk2_scrollbar_file = \
	$(gtk2_assetdir)/Scrollbars/h-slider-active.png \
	$(gtk2_assetdir)/Scrollbars/h-slider-hover.png \
	$(gtk2_assetdir)/Scrollbars/h-slider-insensitive.png \
	$(gtk2_assetdir)/Scrollbars/h-slider.png \
	$(gtk2_assetdir)/Scrollbars/h-trough.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-active.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-hover.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-insensitive.png \
	$(gtk2_assetdir)/Scrollbars/v-slider.png \
	$(gtk2_assetdir)/Scrollbars/v-trough.png
gtk2_shadow_file = \
	$(gtk2_assetdir)/Shadows/frame.png \
	$(gtk2_assetdir)/Shadows/gap.png \
	$(gtk2_assetdir)/Shadows/z-depth-1.svg \
	$(gtk2_assetdir)/Shadows/z-depth-2.svg
gtk2_spin_file = \
	$(gtk2_assetdir)/Spin/ltr-down-active.png \
	$(gtk2_assetdir)/Spin/ltr-down-hover.png \
	$(gtk2_assetdir)/Spin/ltr-down-insensitive.png \
	$(gtk2_assetdir)/Spin/ltr-down.png \
	$(gtk2_assetdir)/Spin/ltr-up-active.png \
	$(gtk2_assetdir)/Spin/ltr-up-hover.png \
	$(gtk2_assetdir)/Spin/ltr-up-insensitive.png \
	$(gtk2_assetdir)/Spin/ltr-up.png \
	$(gtk2_assetdir)/Spin/rtl-down-active.png \
	$(gtk2_assetdir)/Spin/rtl-down-hover.png \
	$(gtk2_assetdir)/Spin/rtl-down-insensitive.png \
	$(gtk2_assetdir)/Spin/rtl-down.png \
	$(gtk2_assetdir)/Spin/rtl-up-active.png \
	$(gtk2_assetdir)/Spin/rtl-up-hover.png \
	$(gtk2_assetdir)/Spin/rtl-up-insensitive.png \
	$(gtk2_assetdir)/Spin/rtl-up.png
gtk2_toolbar_file = \
	$(gtk2_assetdir)/Toolbar/inline-toolbar.png

gtk2_nokto_file = \
	$(gtk2dir)/3rd-party-dark.rc \
	$(gtk2dir)/colors-dark.rc \
	$(gtk2dir)/common-dark.rc
gtk2_nokto_eta_file = \
	$(gtk2dir)/3rd-party-dark-eta.rc \
	$(gtk2dir)/colors-dark.rc \
	$(gtk2dir)/common-dark-eta.rc
gtk2_nokto_gtkrc_file = \
	$(gtk2dir)/gtkrc-dark
gtk2_nokto_eta_gtkrc_file = \
	$(gtk2dir)/gtkrc-dark-eta
gtk2_nokto_arrow_file = \
	$(gtk2_assetdir)/Arrows/down-alt-dark.png \
	$(gtk2_assetdir)/Arrows/down-alt-hover-dark.png \
	$(gtk2_assetdir)/Arrows/down-alt-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/down-dark.png \
	$(gtk2_assetdir)/Arrows/down-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/left-alt-dark.png \
	$(gtk2_assetdir)/Arrows/left-alt-hover-dark.png \
	$(gtk2_assetdir)/Arrows/left-alt-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/left-dark.png \
	$(gtk2_assetdir)/Arrows/left-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/right-alt-dark.png \
	$(gtk2_assetdir)/Arrows/right-alt-hover-dark.png \
	$(gtk2_assetdir)/Arrows/right-alt-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/right-dark.png \
	$(gtk2_assetdir)/Arrows/right-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/up-alt-dark.png \
	$(gtk2_assetdir)/Arrows/up-alt-hover-dark.png \
	$(gtk2_assetdir)/Arrows/up-alt-insensitive-dark.png \
	$(gtk2_assetdir)/Arrows/up-dark.png \
	$(gtk2_assetdir)/Arrows/up-insensitive-dark.png
gtk2_nokto_button_file = \
	$(gtk2_assetdir)/Buttons/accent-flat-button-active.png \
	$(gtk2_assetdir)/Buttons/accent-flat-button-hover.png \
	$(gtk2_assetdir)/Buttons/buttonbox-flat-button-active-dark.png \
	$(gtk2_assetdir)/Buttons/buttonbox-flat-button-hover-dark.png \
	$(gtk2_assetdir)/Buttons/button-active-dark.png \
	$(gtk2_assetdir)/Buttons/button-dark.png \
	$(gtk2_assetdir)/Buttons/button-hover-dark.png \
	$(gtk2_assetdir)/Buttons/button-insensitive-dark.png \
	$(gtk2_assetdir)/Buttons/flat-button-active-dark.png \
	$(gtk2_assetdir)/Buttons/flat-button-hover-dark.png \
	$(gtk2_assetdir)/Buttons/ltr-button-active-dark.png \
	$(gtk2_assetdir)/Buttons/ltr-button-dark.png \
	$(gtk2_assetdir)/Buttons/ltr-button-hover-dark.png \
	$(gtk2_assetdir)/Buttons/ltr-button-insensitive-dark.png \
	$(gtk2_assetdir)/Buttons/rtl-button-active-dark.png \
	$(gtk2_assetdir)/Buttons/rtl-button-dark.png \
	$(gtk2_assetdir)/Buttons/rtl-button-hover-dark.png \
	$(gtk2_assetdir)/Buttons/rtl-button-insensitive-dark.png
gtk2_nokto_checkradio_file = \
	$(gtk2_assetdir)/Check-Radio/check-mixed-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-mixed-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-off-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-hover-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-insensitive-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-off-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-on-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-on-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-on-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-on-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/check-on-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-on-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/check-on-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-mixed-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-hover-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-insensitive-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-off-menuitem-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-active-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-hover-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-insensitive-dark.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-hover-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-insensitive-menuitem.png \
	$(gtk2_assetdir)/Check-Radio/radio-on-menuitem.png
gtk2_nokto_column_file = \
	$(gtk2_assetdir)/Column/column-active-dark.png \
	$(gtk2_assetdir)/Column/column-dark.png \
	$(gtk2_assetdir)/Column/column-hover-dark.png \
	$(gtk2_assetdir)/Column/column-insensitive-dark.png
gtk2_nokto_entry_file = \
	$(gtk2_assetdir)/Entry/bg-dark.png \
	$(gtk2_assetdir)/Entry/bg-active-dark.png \
	$(gtk2_assetdir)/Entry/bg-insensitive-dark.png \
	$(gtk2_assetdir)/Entry/entry-active-dark.png \
	$(gtk2_assetdir)/Entry/entry-dark.png \
	$(gtk2_assetdir)/Entry/entry-insensitive-dark.png \
	$(gtk2_assetdir)/Entry/ltr-entry-active-dark.png \
	$(gtk2_assetdir)/Entry/ltr-entry-dark.png \
	$(gtk2_assetdir)/Entry/ltr-entry-insensitive-dark.png \
	$(gtk2_assetdir)/Entry/rtl-entry-active-dark.png \
	$(gtk2_assetdir)/Entry/rtl-entry-dark.png \
	$(gtk2_assetdir)/Entry/rtl-entry-insensitive-dark.png
gtk2_nokto_handle_file = \
	$(gtk2_assetdir)/Handles/h-handle-active-dark.png \
	$(gtk2_assetdir)/Handles/h-handle-dark.png \
	$(gtk2_assetdir)/Handles/h-handle-hover-dark.png \
	$(gtk2_assetdir)/Handles/h-handle-insensitive-dark.png \
	$(gtk2_assetdir)/Handles/v-handle-active-dark.png \
	$(gtk2_assetdir)/Handles/v-handle-dark.png \
	$(gtk2_assetdir)/Handles/v-handle-hover-dark.png \
	$(gtk2_assetdir)/Handles/v-handle-insensitive-dark.png
gtk2_nokto_line_file = \
	$(gtk2_assetdir)/Lines/h-line.png \
	$(gtk2_assetdir)/Lines/menu-line-ltr.png \
	$(gtk2_assetdir)/Lines/menu-line-rtl.png \
	$(gtk2_assetdir)/Lines/v-line.png
gtk2_nokto_other_file = \
	$(gtk2_assetdir)/Others/bottom.png \
	$(gtk2_assetdir)/Others/focus-dark.png \
	$(gtk2_assetdir)/Others/left.png \
	$(gtk2_assetdir)/Others/menu-bg-dark.png \
	$(gtk2_assetdir)/Others/null.svg \
	$(gtk2_assetdir)/Others/right.png \
	$(gtk2_assetdir)/Others/top-hover.png \
	$(gtk2_assetdir)/Others/top.png
gtk2_nokto_progress_file = \
	$(gtk2_assetdir)/ProgressBar/bar.png \
	$(gtk2_assetdir)/ProgressBar/trough-dark.png
gtk2_nokto_range_file = \
	$(gtk2_assetdir)/Range/h-scale-trough-active.png \
	$(gtk2_assetdir)/Range/h-scale-trough-dark.png \
	$(gtk2_assetdir)/Range/h-scale-trough-insensitive-dark.png \
	$(gtk2_assetdir)/Range/scale-slider-active.png \
	$(gtk2_assetdir)/Range/scale-slider-hover.png \
	$(gtk2_assetdir)/Range/scale-slider-insensitive-dark.png \
	$(gtk2_assetdir)/Range/scale-slider.png \
	$(gtk2_assetdir)/Range/v-scale-trough-active.png \
	$(gtk2_assetdir)/Range/v-scale-trough-dark.png \
	$(gtk2_assetdir)/Range/v-scale-trough-insensitive-dark.png
gtk2_nokto_scrollbar_file = \
	$(gtk2_assetdir)/Scrollbars/h-slider-active-dark.png \
	$(gtk2_assetdir)/Scrollbars/h-slider-dark.png \
	$(gtk2_assetdir)/Scrollbars/h-slider-hover-dark.png \
	$(gtk2_assetdir)/Scrollbars/h-slider-insensitive-dark.png \
	$(gtk2_assetdir)/Scrollbars/h-trough-dark.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-active-dark.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-dark.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-hover-dark.png \
	$(gtk2_assetdir)/Scrollbars/v-slider-insensitive-dark.png \
	$(gtk2_assetdir)/Scrollbars/v-trough-dark.png
gtk2_nokto_shadow_file = \
	$(gtk2_assetdir)/Shadows/frame.png \
	$(gtk2_assetdir)/Shadows/gap.png \
	$(gtk2_assetdir)/Shadows/z-depth-1.svg \
	$(gtk2_assetdir)/Shadows/z-depth-2.svg
gtk2_nokto_spin_file = \
	$(gtk2_assetdir)/Spin/ltr-down-active-dark.png \
	$(gtk2_assetdir)/Spin/ltr-down-dark.png \
	$(gtk2_assetdir)/Spin/ltr-down-hover-dark.png \
	$(gtk2_assetdir)/Spin/ltr-down-insensitive-dark.png \
	$(gtk2_assetdir)/Spin/ltr-up-active-dark.png \
	$(gtk2_assetdir)/Spin/ltr-up-dark.png \
	$(gtk2_assetdir)/Spin/ltr-up-hover-dark.png \
	$(gtk2_assetdir)/Spin/ltr-up-insensitive-dark.png \
	$(gtk2_assetdir)/Spin/rtl-down-active-dark.png \
	$(gtk2_assetdir)/Spin/rtl-down-dark.png \
	$(gtk2_assetdir)/Spin/rtl-down-hover-dark.png \
	$(gtk2_assetdir)/Spin/rtl-down-insensitive-dark.png \
	$(gtk2_assetdir)/Spin/rtl-up-active-dark.png \
	$(gtk2_assetdir)/Spin/rtl-up-dark.png \
	$(gtk2_assetdir)/Spin/rtl-up-hover-dark.png \
	$(gtk2_assetdir)/Spin/rtl-up-insensitive-dark.png
gtk2_nokto_toolbar_file = \
	$(gtk2_assetdir)/Toolbar/inline-toolbar-dark.png

gtknextdir   = $(srcdir)/gtk-4.0
gtknext_file = \
	$(gtknextdir)/gtk.css \
	$(gtknextdir)/gtk-dark.css \
	$(gtknextdir)/gtk.gresource

gtknextetadir   = $(srcdir)/gtk-4.0-eta
gtknexteta_file = \
	$(gtknextetadir)/gtk.css \
	$(gtknextetadir)/gtk-dark.css \
	$(gtknextetadir)/gtk.gresource

gtknextnoktodir   = $(srcdir)/gtk-4.0-nokto
gtknextnokto_file = \
	$(gtknextnoktodir)/gtk.css \
	$(gtknextnoktodir)/gtk.gresource

gtknextnoktoetadir   = $(srcdir)/gtk-4.0-nokto-eta
gtknextnoktoeta_file = \
	$(gtknextnoktoetadir)/gtk.css \
	$(gtknextnoktoetadir)/gtk.gresource

xfcenotifydir   = $(srcdir)/xfce-notify-4.0
xfcenotify_file = \
	$(xfcenotifydir)/gtk.css

index_file          = $(srcdir)/index.theme
index_nokto_file    = $(srcdir)/index.theme-nokto
indexeta_file       = $(srcdir)/index.theme-eta
index_noktoeta_file = $(srcdir)/index.theme-nokto-eta

sassc_option = -M -t compact
parallel_option = --null --no-notice --line-buffer --jobs 100%

# *******************************************
# * Generate CSS stylesheets and PNG images *
# *******************************************

# ignore -jN option for --enable-parallel
.NOTPARALLEL:

all:
	$(MKDIR_P) $(srcdir)/gtk-3.20 && \
	$(MKDIR_P) $(srcdir)/gtk-3.20-eta && \
	$(MKDIR_P) $(srcdir)/gtk-3.20-nokto && \
	$(MKDIR_P) $(srcdir)/gtk-3.20-nokto-eta && \
	$(MKDIR_P) $(srcdir)/gtk-3.22 && \
	$(MKDIR_P) $(srcdir)/gtk-3.22-eta && \
	$(MKDIR_P) $(srcdir)/gtk-3.22-nokto && \
	$(MKDIR_P) $(srcdir)/gtk-3.22-nokto-eta && \
	$(MKDIR_P) $(srcdir)/gtk-3.24 && \
	$(MKDIR_P) $(srcdir)/gtk-3.24-eta && \
	$(MKDIR_P) $(srcdir)/gtk-3.24-nokto && \
	$(MKDIR_P) $(srcdir)/gtk-3.24-nokto-eta && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2 && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Arrows && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Buttons && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Arrows && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Check-Radio && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Column && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Entry && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Handles && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Lines && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Others && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/ProgressBar && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Range && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Scrollbars && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Shadows && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Spin && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk2/Toolbar && \
	$(MKDIR_P) $(srcdir)/asset/assets-gtk3

	cd $(srcdir)/gtk-2.0 && ./recolor-gtk2.sh
if ENABLE_PARALLEL
	cd $(srcdir)/sass && $(PARALLEL) $(parallel_option) ::: \
		"$(SASSC) $(sassc_option) 3.20/gtk.scss ../gtk-3.20/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.20/gtk-dark.scss ../gtk-3.20/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 3.20/gtk-eta.scss ../gtk-3.20-eta/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.20/gtk-dark-eta.scss ../gtk-3.20-eta/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 3.22/gtk.scss ../gtk-3.22/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.22/gtk-dark.scss ../gtk-3.22/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 3.22/gtk-eta.scss ../gtk-3.22-eta/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.22/gtk-dark-eta.scss ../gtk-3.22-eta/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 3.24/gtk.scss ../gtk-3.24/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.24/gtk-dark.scss ../gtk-3.24/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 3.24/gtk-eta.scss ../gtk-3.24-eta/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 3.24/gtk-dark-eta.scss ../gtk-3.24-eta/gtk-contained-dark.css"
else
	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) 3.20/gtk.scss ../gtk-3.20/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.20/gtk-dark.scss ../gtk-3.20/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 3.20/gtk-eta.scss ../gtk-3.20-eta/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.20/gtk-dark-eta.scss ../gtk-3.20-eta/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 3.22/gtk.scss ../gtk-3.22/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.22/gtk-dark.scss ../gtk-3.22/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 3.22/gtk-eta.scss ../gtk-3.22-eta/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.22/gtk-dark-eta.scss ../gtk-3.22-eta/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 3.24/gtk.scss ../gtk-3.24/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.24/gtk-dark.scss ../gtk-3.24/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 3.24/gtk-eta.scss ../gtk-3.24-eta/gtk-contained.css && \
		$(SASSC) $(sassc_option) 3.24/gtk-dark-eta.scss ../gtk-3.24-eta/gtk-contained-dark.css
endif
	cp -Rv $(srcdir)/gtk-3.20/gtk-contained-dark.css $(srcdir)/gtk-3.20-nokto/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-3.20-eta/gtk-contained-dark.css $(srcdir)/gtk-3.20-nokto-eta/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-3.22/gtk-contained-dark.css $(srcdir)/gtk-3.22-nokto/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-3.22-eta/gtk-contained-dark.css $(srcdir)/gtk-3.22-nokto-eta/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-3.24/gtk-contained-dark.css $(srcdir)/gtk-3.24-nokto/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-3.24-eta/gtk-contained-dark.css $(srcdir)/gtk-3.24-nokto-eta/gtk-contained-dark.css

if ENABLE_GTK_NEXT
	$(MKDIR_P) $(srcdir)/gtk-4.0
	$(MKDIR_P) $(srcdir)/gtk-4.0-eta
	$(MKDIR_P) $(srcdir)/gtk-4.0-nokto
	$(MKDIR_P) $(srcdir)/gtk-4.0-nokto-eta
if ENABLE_PARALLEL
	cd $(srcdir)/sass && $(PARALLEL) $(parallel_option) ::: \
		"$(SASSC) $(sassc_option) 4.0/gtk.scss ../gtk-4.0/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 4.0/gtk-dark.scss ../gtk-4.0/gtk-contained-dark.css" \
		"$(SASSC) $(sassc_option) 4.0/gtk-eta.scss ../gtk-4.0-eta/gtk-contained.css" \
		"$(SASSC) $(sassc_option) 4.0/gtk-dark-eta.scss ../gtk-4.0-eta/gtk-contained-dark.css"
else
	cd $(srcdir)/sass && \
		$(SASSC) $(sassc_option) 4.0/gtk.scss ../gtk-4.0/gtk-contained.css && \
		$(SASSC) $(sassc_option) 4.0/gtk-dark.scss ../gtk-4.0/gtk-contained-dark.css && \
		$(SASSC) $(sassc_option) 4.0/gtk-eta.scss ../gtk-4.0-eta/gtk-contained.css && \
		$(SASSC) $(sassc_option) 4.0/gtk-dark-eta.scss ../gtk-4.0-eta/gtk-contained-dark.css
endif
	cp -Rv $(srcdir)/gtk-4.0/gtk-contained-dark.css $(srcdir)/gtk-4.0-nokto/gtk-contained-dark.css
	cp -Rv $(srcdir)/gtk-4.0-eta/gtk-contained-dark.css $(srcdir)/gtk-4.0-nokto-eta/gtk-contained-dark.css
endif

if ENABLE_XFCE
	$(MKDIR_P) $(srcdir)/xfce-notify-4.0
	cd $(srcdir)/sass && $(SASSC) $(sassc_option) common/xfce-notify-4.0.scss ../xfce-notify-4.0/gtk.css
endif

if ENABLE_PARALLEL
	cd $(srcdir)/asset/assets-gtk2-scripts && \
		./recolor-assets-gtk2.sh
	cd $(srcdir)/asset/assets-gtk2-scripts && \
		./clone-assets-gtk2.sh
	cd $(srcdir)/asset/assets-gtk3-scripts && \
		./recolor-assets-gtk3.sh
	cd $(srcdir)/asset/assets-gtk2-scripts && \
	$(PARALLEL) $(parallel_option) ./render-assets-gtk2.sh ::: \
		arrow \
		button \
		checkradio \
		column \
		entry \
		handle \
		misc \
		range \
		scrollbar \
		spin
	cd $(srcdir)/asset/assets-gtk3-scripts && \
	$(PARALLEL) $(parallel_option) ./render-assets-gtk3.sh ::: \
		checkbox \
		misc \
		radio \
		slider \
		toggle \
		window-close \
		window-minimize \
		window-maximize \
		window-unmaximize
else
	cd $(srcdir)/asset/assets-gtk2-scripts && \
		./recolor-assets-gtk2.sh && \
		./clone-assets-gtk2.sh && \
		./render-assets-gtk2.sh all
	cd $(srcdir)/asset/assets-gtk3-scripts && \
		./recolor-assets-gtk3.sh && \
		./render-assets-gtk3.sh all
endif

	cd $(srcdir)/sass && \
		./compile-gresource.sh 3.20 && \
		./compile-gresource.sh 3.22 && \
		./compile-gresource.sh 3.24
if ENABLE_GTK_NEXT
	cd $(srcdir)/sass && ./compile-gresource.sh 4.0
endif

# *****************
# * Install files *
# *****************

install-data-local:
	$(MKDIR_P) $(adaptadir)
	$(MKDIR_P) $(noktodir)
	$(MKDIR_P) $(adaptaetadir)
	$(MKDIR_P) $(noktoetadir)

	cp -Rv $(index_file) $(adaptadir)
	cp -Rv $(index_nokto_file) $(noktodir)/index.theme
	cp -Rv $(indexeta_file) $(adaptaetadir)/index.theme
	cp -Rv $(index_noktoeta_file) $(noktoetadir)/index.theme

	$(MKDIR_P) $(adaptadir)/gtk-3.0
	cp -Rv $(gtk320_file) $(adaptadir)/gtk-3.0
	cp -Rv $(gtk3_thumb_file) $(adaptadir)/gtk-3.0
	$(MKDIR_P) $(adaptaetadir)/gtk-3.0
	cp -Rv $(gtk320eta_file) $(adaptaetadir)/gtk-3.0
	cp -Rv $(gtk3_thumb_file) $(adaptaetadir)/gtk-3.0
	$(MKDIR_P) $(noktodir)/gtk-3.0
	cp -Rv $(gtk320nokto_file) $(noktodir)/gtk-3.0
	cp -Rv $(gtk3_darkthumb_file) $(noktodir)/gtk-3.0/thumbnail.png
	$(MKDIR_P) $(noktoetadir)/gtk-3.0
	cp -Rv $(gtk320noktoeta_file) $(noktoetadir)/gtk-3.0
	cp -Rv $(gtk3_darkthumb_file) $(noktoetadir)/gtk-3.0/thumbnail.png

	$(MKDIR_P) $(adaptadir)/gtk-3.22
	cp -Rv $(gtk322_file) $(adaptadir)/gtk-3.22
	$(MKDIR_P) $(adaptaetadir)/gtk-3.22
	cp -Rv $(gtk322eta_file) $(adaptaetadir)/gtk-3.22
	$(MKDIR_P) $(noktodir)/gtk-3.22
	cp -Rv $(gtk322nokto_file) $(noktodir)/gtk-3.22
	$(MKDIR_P) $(noktoetadir)/gtk-3.22
	cp -Rv $(gtk322noktoeta_file) $(noktoetadir)/gtk-3.22

	$(MKDIR_P) $(adaptadir)/gtk-3.24
	cp -Rv $(gtk324_file) $(adaptadir)/gtk-3.24
	$(MKDIR_P) $(adaptaetadir)/gtk-3.24
	cp -Rv $(gtk324eta_file) $(adaptaetadir)/gtk-3.24
	$(MKDIR_P) $(noktodir)/gtk-3.24
	cp -Rv $(gtk324nokto_file) $(noktodir)/gtk-3.24
	$(MKDIR_P) $(noktoetadir)/gtk-3.24
	cp -Rv $(gtk324noktoeta_file) $(noktoetadir)/gtk-3.24

	$(MKDIR_P) $(adaptadir)/gtk-2.0
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Arrows
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Buttons
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Column
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Entry
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Handles
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Lines
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Others
	$(MKDIR_P) $(adaptadir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Range
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Shadows
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Spin
	$(MKDIR_P) $(adaptadir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_file) $(adaptadir)/gtk-2.0
	cp -Rv $(gtk2_gtkrc_file) $(adaptadir)/gtk-2.0
	cp -Rv $(gtk2_arrow_file) $(adaptadir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_button_file) $(adaptadir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_checkradio_file) $(adaptadir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_column_file) $(adaptadir)/gtk-2.0/Column
	cp -Rv $(gtk2_entry_file) $(adaptadir)/gtk-2.0/Entry
	cp -Rv $(gtk2_handle_file) $(adaptadir)/gtk-2.0/Handles
	cp -Rv $(gtk2_line_file) $(adaptadir)/gtk-2.0/Lines
	cp -Rv $(gtk2_other_file) $(adaptadir)/gtk-2.0/Others
	cp -Rv $(gtk2_progress_file) $(adaptadir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_range_file) $(adaptadir)/gtk-2.0/Range
	cp -Rv $(gtk2_scrollbar_file) $(adaptadir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_shadow_file) $(adaptadir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_spin_file) $(adaptadir)/gtk-2.0/Spin
	cp -Rv $(gtk2_toolbar_file) $(adaptadir)/gtk-2.0/Toolbar

	$(MKDIR_P) $(adaptaetadir)/gtk-2.0
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Arrows
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Buttons
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Column
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Entry
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Handles
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Lines
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Others
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Range
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Shadows
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Spin
	$(MKDIR_P) $(adaptaetadir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_eta_file) $(adaptaetadir)/gtk-2.0
	cp -Rv $(gtk2_eta_gtkrc_file) $(adaptaetadir)/gtk-2.0/gtkrc
	cp -Rv $(gtk2_arrow_file) $(adaptaetadir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_button_file) $(adaptaetadir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_checkradio_file) $(adaptaetadir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_column_file) $(adaptaetadir)/gtk-2.0/Column
	cp -Rv $(gtk2_entry_file) $(adaptaetadir)/gtk-2.0/Entry
	cp -Rv $(gtk2_handle_file) $(adaptaetadir)/gtk-2.0/Handles
	cp -Rv $(gtk2_line_file) $(adaptaetadir)/gtk-2.0/Lines
	cp -Rv $(gtk2_other_file) $(adaptaetadir)/gtk-2.0/Others
	cp -Rv $(gtk2_progress_file) $(adaptaetadir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_range_file) $(adaptaetadir)/gtk-2.0/Range
	cp -Rv $(gtk2_scrollbar_file) $(adaptaetadir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_shadow_file) $(adaptaetadir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_spin_file) $(adaptaetadir)/gtk-2.0/Spin
	cp -Rv $(gtk2_toolbar_file) $(adaptaetadir)/gtk-2.0/Toolbar

	$(MKDIR_P) $(noktodir)/gtk-2.0
	$(MKDIR_P) $(noktodir)/gtk-2.0/Arrows
	$(MKDIR_P) $(noktodir)/gtk-2.0/Buttons
	$(MKDIR_P) $(noktodir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(noktodir)/gtk-2.0/Column
	$(MKDIR_P) $(noktodir)/gtk-2.0/Entry
	$(MKDIR_P) $(noktodir)/gtk-2.0/Handles
	$(MKDIR_P) $(noktodir)/gtk-2.0/Lines
	$(MKDIR_P) $(noktodir)/gtk-2.0/Others
	$(MKDIR_P) $(noktodir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(noktodir)/gtk-2.0/Range
	$(MKDIR_P) $(noktodir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(noktodir)/gtk-2.0/Shadows
	$(MKDIR_P) $(noktodir)/gtk-2.0/Spin
	$(MKDIR_P) $(noktodir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_nokto_file) $(noktodir)/gtk-2.0
	cp -Rv $(gtk2_nokto_gtkrc_file) $(noktodir)/gtk-2.0/gtkrc
	cp -Rv $(gtk2_nokto_arrow_file) $(noktodir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_nokto_button_file) $(noktodir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_nokto_checkradio_file) $(noktodir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_nokto_column_file) $(noktodir)/gtk-2.0/Column
	cp -Rv $(gtk2_nokto_entry_file) $(noktodir)/gtk-2.0/Entry
	cp -Rv $(gtk2_nokto_handle_file) $(noktodir)/gtk-2.0/Handles
	cp -Rv $(gtk2_nokto_line_file) $(noktodir)/gtk-2.0/Lines
	cp -Rv $(gtk2_nokto_other_file) $(noktodir)/gtk-2.0/Others
	cp -Rv $(gtk2_nokto_progress_file) $(noktodir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_nokto_range_file) $(noktodir)/gtk-2.0/Range
	cp -Rv $(gtk2_nokto_scrollbar_file) $(noktodir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_nokto_shadow_file) $(noktodir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_nokto_spin_file) $(noktodir)/gtk-2.0/Spin
	cp -Rv $(gtk2_nokto_toolbar_file) $(noktodir)/gtk-2.0/Toolbar

	$(MKDIR_P) $(noktoetadir)/gtk-2.0
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Arrows
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Buttons
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Check-Radio
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Column
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Entry
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Handles
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Lines
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Others
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/ProgressBar
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Range
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Scrollbars
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Shadows
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Spin
	$(MKDIR_P) $(noktoetadir)/gtk-2.0/Toolbar
	cp -Rv $(gtk2_nokto_eta_file) $(noktoetadir)/gtk-2.0
	cp -Rv $(gtk2_nokto_eta_gtkrc_file) $(noktoetadir)/gtk-2.0/gtkrc
	cp -Rv $(gtk2_nokto_arrow_file) $(noktoetadir)/gtk-2.0/Arrows
	cp -Rv $(gtk2_nokto_button_file) $(noktoetadir)/gtk-2.0/Buttons
	cp -Rv $(gtk2_nokto_checkradio_file) $(noktoetadir)/gtk-2.0/Check-Radio
	cp -Rv $(gtk2_nokto_column_file) $(noktoetadir)/gtk-2.0/Column
	cp -Rv $(gtk2_nokto_entry_file) $(noktoetadir)/gtk-2.0/Entry
	cp -Rv $(gtk2_nokto_handle_file) $(noktoetadir)/gtk-2.0/Handles
	cp -Rv $(gtk2_nokto_line_file) $(noktoetadir)/gtk-2.0/Lines
	cp -Rv $(gtk2_nokto_other_file) $(noktoetadir)/gtk-2.0/Others
	cp -Rv $(gtk2_nokto_progress_file) $(noktoetadir)/gtk-2.0/ProgressBar
	cp -Rv $(gtk2_nokto_range_file) $(noktoetadir)/gtk-2.0/Range
	cp -Rv $(gtk2_nokto_scrollbar_file) $(noktoetadir)/gtk-2.0/Scrollbars
	cp -Rv $(gtk2_nokto_shadow_file) $(noktoetadir)/gtk-2.0/Shadows
	cp -Rv $(gtk2_nokto_spin_file) $(noktoetadir)/gtk-2.0/Spin
	cp -Rv $(gtk2_nokto_toolbar_file) $(noktoetadir)/gtk-2.0/Toolbar

if ENABLE_GTK_NEXT
	$(MKDIR_P) $(adaptadir)/gtk-4.0
	cp -Rv $(gtknext_file) $(adaptadir)/gtk-4.0
	cp -Rv $(gtk3_thumb_file) $(adaptadir)/gtk-4.0
	$(MKDIR_P) $(adaptaetadir)/gtk-4.0
	cp -Rv $(gtknexteta_file) $(adaptaetadir)/gtk-4.0
	cp -Rv $(gtk3_thumb_file) $(adaptaetadir)/gtk-4.0
	$(MKDIR_P) $(noktodir)/gtk-4.0
	cp -Rv $(gtknextnokto_file) $(noktodir)/gtk-4.0
	cp -Rv $(gtk3_darkthumb_file) $(noktodir)/gtk-4.0/thumbnail.png
	$(MKDIR_P) $(noktoetadir)/gtk-4.0
	cp -Rv $(gtknextnoktoeta_file) $(noktoetadir)/gtk-4.0
	cp -Rv $(gtk3_darkthumb_file) $(noktoetadir)/gtk-4.0/thumbnail.png
endif

if ENABLE_XFCE
	$(MKDIR_P) $(adaptadir)/xfce-notify-4.0
	cp -Rv $(xfcenotify_file) $(adaptadir)/xfce-notify-4.0
endif

# *******************
# * Uninstall files *
# *******************

uninstall-local:
	test -e $(noktodir)/index.theme && rm -rfv $(noktodir)/index.theme
	test -e $(noktodir)/gtk-3.0 && rm -rfv $(noktodir)/gtk-3.0
	test -e $(noktodir)/gtk-3.22 && rm -rfv $(noktodir)/gtk-3.22
	test -e $(noktodir)/gtk-3.24 && rm -rfv $(noktodir)/gtk-3.24
	test -e $(noktodir)/gtk-2.0 && rm -rfv $(noktodir)/gtk-2.0

	test -e $(adaptadir)/index.theme && rm -rfv $(adaptadir)/index.theme
	test -e $(adaptadir)/gtk-3.0 && rm -rfv $(adaptadir)/gtk-3.0
	test -e $(adaptadir)/gtk-3.22 && rm -rfv $(adaptadir)/gtk-3.22
	test -e $(adaptadir)/gtk-3.24 && rm -rfv $(adaptadir)/gtk-3.24
	test -e $(adaptadir)/gtk-2.0 && rm -rfv $(adaptadir)/gtk-2.0

	test -e $(noktoetadir)/index.theme && rm -rfv $(noktoetadir)/index.theme
	test -e $(noktoetadir)/gtk-3.0 && rm -rfv $(noktoetadir)/gtk-3.0
	test -e $(noktoetadir)/gtk-3.22 && rm -rfv $(noktoetadir)/gtk-3.22
	test -e $(noktoetadir)/gtk-3.24 && rm -rfv $(noktoetadir)/gtk-3.24
	test -e $(noktoetadir)/gtk-2.0 && rm -rfv $(noktoetadir)/gtk-2.0

	test -e $(adaptaetadir)/index.theme && rm -rfv $(adaptaetadir)/index.theme
	test -e $(adaptaetadir)/gtk-3.0 && rm -rfv $(adaptaetadir)/gtk-3.0
	test -e $(adaptaetadir)/gtk-3.22 && rm -rfv $(adaptaetadir)/gtk-3.22
	test -e $(adaptaetadir)/gtk-3.24 && rm -rfv $(adaptaetadir)/gtk-3.24
	test -e $(adaptaetadir)/gtk-2.0 && rm -rfv $(adaptaetadir)/gtk-2.0

if ENABLE_GTK_NEXT
	test -e $(noktodir)/gtk-4.0 && rm -rfv $(noktodir)/gtk-4.0
	test -e $(adaptadir)/gtk-4.0 && rm -rfv $(adaptadir)/gtk-4.0

	test -e $(noktoetadir)/gtk-4.0 && rm -rfv $(noktoetadir)/gtk-4.0
	test -e $(adaptaetadir)/gtk-4.0 && rm -rfv $(adaptaetadir)/gtk-4.0
endif

if ENABLE_XFCE
	test -e $(adaptadir)/xfce-notify-4.0/gtk.css && \
		rm -rfv $(adaptadir)/xfce-notify-4.0/gtk.css
endif

# ****************************
# * Clean up generated files *
# ****************************

CLEANFILES = \
	$(srcdir)/gtk-3.20/gtk.css \
	$(srcdir)/gtk-3.20/gtk-dark.css \
	$(srcdir)/gtk-3.20/gtk-contained.css \
	$(srcdir)/gtk-3.20/gtk-contained-dark.css \
	$(srcdir)/gtk-3.20/gtk.gresource \
	$(srcdir)/gtk-3.20-eta/gtk.css \
	$(srcdir)/gtk-3.20-eta/gtk-dark.css \
	$(srcdir)/gtk-3.20-eta/gtk-contained.css \
	$(srcdir)/gtk-3.20-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.20-eta/gtk.gresource \
	$(srcdir)/gtk-3.20-nokto/gtk.css \
	$(srcdir)/gtk-3.20-nokto/gtk-contained-dark.css \
	$(srcdir)/gtk-3.20-nokto/gtk.gresource \
	$(srcdir)/gtk-3.20-nokto-eta/gtk.css \
	$(srcdir)/gtk-3.20-nokto-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.20-nokto-eta/gtk.gresource \
	$(srcdir)/gtk-3.22/gtk.css \
	$(srcdir)/gtk-3.22/gtk-dark.css \
	$(srcdir)/gtk-3.22/gtk-contained.css \
	$(srcdir)/gtk-3.22/gtk-contained-dark.css \
	$(srcdir)/gtk-3.22/gtk.gresource \
	$(srcdir)/gtk-3.22-eta/gtk.css \
	$(srcdir)/gtk-3.22-eta/gtk-dark.css \
	$(srcdir)/gtk-3.22-eta/gtk-contained.css \
	$(srcdir)/gtk-3.22-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.22-eta/gtk.gresource \
	$(srcdir)/gtk-3.22-nokto/gtk.css \
	$(srcdir)/gtk-3.22-nokto/gtk-contained-dark.css \
	$(srcdir)/gtk-3.22-nokto/gtk.gresource \
	$(srcdir)/gtk-3.22-nokto-eta/gtk.css \
	$(srcdir)/gtk-3.22-nokto-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.22-nokto-eta/gtk.gresource \
	$(srcdir)/gtk-3.24/gtk.css \
	$(srcdir)/gtk-3.24/gtk-dark.css \
	$(srcdir)/gtk-3.24/gtk-contained.css \
	$(srcdir)/gtk-3.24/gtk-contained-dark.css \
	$(srcdir)/gtk-3.24/gtk.gresource \
	$(srcdir)/gtk-3.24-eta/gtk.css \
	$(srcdir)/gtk-3.24-eta/gtk-dark.css \
	$(srcdir)/gtk-3.24-eta/gtk-contained.css \
	$(srcdir)/gtk-3.24-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.24-eta/gtk.gresource \
	$(srcdir)/gtk-3.24-nokto/gtk.css \
	$(srcdir)/gtk-3.24-nokto/gtk-contained-dark.css \
	$(srcdir)/gtk-3.24-nokto/gtk.gresource \
	$(srcdir)/gtk-3.24-nokto-eta/gtk.css \
	$(srcdir)/gtk-3.24-nokto-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-3.24-nokto-eta/gtk.gresource \
	$(srcdir)/asset/assets-gtk2/*/*.svg \
	$(srcdir)/asset/assets-gtk2/*/*.png \
	$(srcdir)/asset/assets-gtk3/*.svg \
	$(srcdir)/asset/assets-gtk3/*.png \
	$(srcdir)/asset/assets-gtk2.svg \
	$(srcdir)/asset/assets-gtk3.svg \
	$(srcdir)/asset/inkscape.log \
	$(srcdir)/gtk-2.0/colors.rc \
	$(srcdir)/gtk-2.0/colors-dark.rc \
	$(srcdir)/xfce-notify-4.0/gtk.css
if ENABLE_GTK_NEXT
CLEANFILES += \
	$(srcdir)/gtk-4.0/gtk.css \
	$(srcdir)/gtk-4.0/gtk-dark.css \
	$(srcdir)/gtk-4.0/gtk-contained.css \
	$(srcdir)/gtk-4.0/gtk-contained-dark.css \
	$(srcdir)/gtk-4.0/gtk.gresource \
	$(srcdir)/gtk-4.0-eta/gtk.css \
	$(srcdir)/gtk-4.0-eta/gtk-dark.css \
	$(srcdir)/gtk-4.0-eta/gtk-contained.css \
	$(srcdir)/gtk-4.0-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-4.0-eta/gtk.gresource \
	$(srcdir)/gtk-4.0-nokto/gtk.css \
	$(srcdir)/gtk-4.0-nokto/gtk-contained-dark.css \
	$(srcdir)/gtk-4.0-nokto/gtk.gresource \
	$(srcdir)/gtk-4.0-nokto-eta/gtk.css \
	$(srcdir)/gtk-4.0-nokto-eta/gtk-contained-dark.css \
	$(srcdir)/gtk-4.0-nokto-eta/gtk.gresource
endif

DISTCLEANFILES = \
	$(CLEANFILES)
